# SiFun

./: .gitignore  README.md  create_plot.py  dune-project  sifun.opam  test_coverage.sh  test_runner.sh
examples/: ex02.sf  ex03.sf
lib/: DBAst.ml  DBType.ml  ast.ml  bidirection.ml  bisect.exclude  debruijn.ml  deepskolem.ml  direction.ml  dune  exception.ml  infer.ml  interpreter.ml  lexer.mll  parser.mly  prenex.ml  simple.ml  state.ml  subst.ml  termCtx.ml  type.ml  typeCtx.ml  unify.ml  utils.ml
test/: DBAst.ml  DBType.ml  ast.ml  bidirection.ml  debruijn.ml  deepskolem.ml  dune  infer.ml  parser.ml  parserTypes.ml  prenex.ml  subst.ml  termCtx.ml  type.ml  unify.ml  utils.ml
test/hrp/: T001.hs  T004.in  T004.out  T005.in  T005.out  T006.in  T007.in  T008.in  T009.out  T009.sf.in  T010.in  T010.out  T011.in  T012.sf.in  T013.out  T013.sf.in  T014.out  T014.sf.in  T015.out  T015.sf.in  T016.out  T016.sf.in  T017.sf.in  T018.in  T018.out  T019.in  T019.out  T020.hs.in  T020.in  T020.out  T020.sf.in  T021.hs.in  T021.sf.in  T021.tmp  T022.hs.in  T022.in  T023.hs.in  T023.sf.in  T024.hs.in  T024.in  (+15 more)
