opam-version: "2.0"
version: "1.0.0"
synopsis:
  "Interpreter for SiFun (Simple Functional) Language with three different type systems (supports Higher Rank Polymorphism)"
maintainer: ["Krzysztof Druciarek <kkd26@cam.ac.uk>"]
authors: ["Krzysztof Druciarek <kkd26@cam.ac.uk>"]
license: "gpl-3.0"
homepage: "https://github.com/kkd26/SiFun"
bug-reports: "https://github.com/kkd26/SiFun/issues"
depends: [
  "dune" {>= "2.9"}
  "odoc" {with-doc}
  "mehnir" {>= "2.1"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/kkd26/SiFun"
