opam-version: "2.0"
name: "sifun"
version: "1.0.1"
synopsis:
  "Interpreter for SiFun (Simple Functional) Language with three different type systems (supports Higher Rank Polymorphism)"
maintainer: ["Krzysztof Druciarek <kkd26@cam.ac.uk>"]
authors: ["Krzysztof Druciarek <kkd26@cam.ac.uk>"]
license: "gpl-3.0"
homepage: "https://github.com/kkd26/SiFun"
bug-reports: "https://github.com/kkd26/SiFun/issues"
depends: [
  "ocaml" {>= "4.06"}
  "core" {>= "v0.11.3"}
  "dune" {>= "2.9"}
  "odoc" {with-doc}
  "menhir" {>= "20180523"}
  "ounit2" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/kkd26/SiFun"
